--- a/Group16Alpha/Base.lproj/Main.storyboard
+++ b/Group16Alpha/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1No-TY-WPy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1No-TY-WPy">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -274,13 +274,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GhB-wl-cVH">
-                                <rect key="frame" x="16" y="28" width="343" height="222"/>
+                                <rect key="frame" x="16" y="72" width="343" height="222"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="222" id="ALj-uU-qOF"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="QAT-5c-Dym">
-                                <rect key="frame" x="69" y="276" width="102" height="143"/>
+                                <rect key="frame" x="69" y="320" width="102" height="143"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Type / Breed:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEf-kI-FAL">
                                         <rect key="frame" x="0.0" y="0.0" width="102" height="20.5"/>
@@ -314,14 +314,14 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vqx-TI-LVP">
-                                <rect key="frame" x="44" y="469" width="288" height="121"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Description" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vqx-TI-LVP">
+                                <rect key="frame" x="16" y="469" width="343" height="178"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="9au-H0-QEE">
-                                <rect key="frame" x="197" y="277" width="105.5" height="142"/>
+                                <rect key="frame" x="197" y="321" width="105.5" height="142"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;type/breed&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qya-ZF-RuA">
                                         <rect key="frame" x="0.0" y="0.0" width="105.5" height="20.5"/>
@@ -350,7 +350,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;name&gt;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tjv-TV-pYU">
-                                <rect key="frame" x="145" y="218.5" width="86" height="27.5"/>
+                                <rect key="frame" x="145" y="262.5" width="86" height="27.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -359,6 +359,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="tjv-TV-pYU" firstAttribute="centerX" secondItem="deb-Pv-mYe" secondAttribute="centerX" id="6ho-8w-4dr"/>
+                            <constraint firstItem="Vqx-TI-LVP" firstAttribute="trailing" secondItem="deb-Pv-mYe" secondAttribute="trailingMargin" id="AQI-7O-t9O"/>
                             <constraint firstAttribute="trailing" secondItem="GhB-wl-cVH" secondAttribute="trailing" constant="16" id="GyE-XK-tow"/>
                             <constraint firstItem="9au-H0-QEE" firstAttribute="centerY" secondItem="QAT-5c-Dym" secondAttribute="centerY" id="U3Q-Ha-nJP"/>
                             <constraint firstItem="GhB-wl-cVH" firstAttribute="top" secondItem="Zmq-rL-RFZ" secondAttribute="bottom" constant="8" id="VYQ-QB-meQ"/>
@@ -367,7 +368,7 @@
                             <constraint firstItem="QAT-5c-Dym" firstAttribute="leading" secondItem="deb-Pv-mYe" secondAttribute="leadingMargin" constant="53" id="dZ6-Rh-30A"/>
                             <constraint firstItem="QAT-5c-Dym" firstAttribute="top" secondItem="tjv-TV-pYU" secondAttribute="bottom" constant="30" id="dmP-wH-GFO"/>
                             <constraint firstItem="GhB-wl-cVH" firstAttribute="centerX" secondItem="Vqx-TI-LVP" secondAttribute="centerX" id="fYN-Nr-CGX"/>
-                            <constraint firstAttribute="bottom" secondItem="QAT-5c-Dym" secondAttribute="bottom" constant="248" id="rXf-4s-X2O"/>
+                            <constraint firstItem="Vqx-TI-LVP" firstAttribute="leading" secondItem="deb-Pv-mYe" secondAttribute="leadingMargin" id="phW-1B-Qk9"/>
                             <constraint firstItem="QAT-5c-Dym" firstAttribute="top" secondItem="GhB-wl-cVH" secondAttribute="bottom" constant="26" id="xKR-JZ-zZj"/>
                             <constraint firstItem="GhB-wl-cVH" firstAttribute="leading" secondItem="deb-Pv-mYe" secondAttribute="leading" constant="16" id="xmU-g3-SKI"/>
                             <constraint firstItem="Vqx-TI-LVP" firstAttribute="top" secondItem="QAT-5c-Dym" secondAttribute="bottom" constant="50" id="z9z-ia-bav"/>
@@ -407,6 +408,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="uld-U6-y0v"/>
+        <segue reference="KWT-kz-eKm"/>
     </inferredMetricsTieBreakers>
 </document>
