--- a/Group16Alpha/Base.lproj/Main.storyboard
+++ b/Group16Alpha/Base.lproj/Main.storyboard
@@ -105,7 +105,7 @@
                         <outlet property="passwordTextField" destination="WYe-Jl-veH" id="JDU-Qj-ocd"/>
                         <outlet property="signInButton" destination="jq3-dG-2MO" id="V1m-el-tkS"/>
                         <outlet property="usernameTextField" destination="5xE-jK-bwe" id="rxf-rc-TEw"/>
-                        <segue destination="qGz-1B-51z" kind="show" identifier="AvailablePetsSegue" id="4RD-ek-nBc"/>
+                        <segue destination="eMb-pM-Uhx" kind="show" identifier="AvailablePetsSegue" id="4RD-ek-nBc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iGS-X2-K7h" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -247,7 +247,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="photo" destination="5E8-jx-64n" id="f3y-9C-v4G"/>
-                                    <segue destination="FtA-uk-kPS" kind="show" id="uGL-YO-mPI"/>
+                                    <segue destination="FtA-uk-kPS" kind="show" identifier="petSegue" id="uGL-YO-mPI"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -256,10 +256,116 @@
                             <outlet property="delegate" destination="qGz-1B-51z" id="8k4-ZL-TzG"/>
                         </connections>
                     </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="9Pt-9Q-2Rf">
+                        <barButtonItem key="rightBarButtonItem" title="Search" id="lKY-DU-a3b">
+                            <connections>
+                                <segue destination="Q7C-zT-b5T" kind="show" identifier="searchSegue" id="0AP-Oh-wAm"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dxo-PF-cnh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1292" y="888.30584707646187"/>
+            <point key="canvasLocation" x="2231.1999999999998" y="888.30584707646187"/>
+        </scene>
+        <!--Search View Controller-->
+        <scene sceneID="JMi-f8-Djo">
+            <objects>
+                <viewController id="Q7C-zT-b5T" customClass="SearchViewController" customModule="Group16Alpha" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="De1-H3-5CI"/>
+                        <viewControllerLayoutGuide type="bottom" id="rjC-Hn-VNp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HQX-OY-eei">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Animal:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H4I-Xf-2At">
+                                <rect key="frame" x="35" y="109" width="57" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="61U-Nh-F78">
+                                <rect key="frame" x="57" y="195" width="37" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sex:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZG-Xl-0xw">
+                                <rect key="frame" x="59" y="367" width="33" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPv-es-y8r">
+                                <rect key="frame" x="57" y="281" width="35" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J2M-T9-gWh">
+                                <rect key="frame" x="109" y="104" width="237" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mw7-Gt-2K5">
+                                <rect key="frame" x="109" y="191" width="237" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eBv-qW-kq3">
+                                <rect key="frame" x="109" y="277" width="237" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NbK-7i-hGi">
+                                <rect key="frame" x="163" y="575" width="48" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Search"/>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MN5-6H-nOV">
+                                <rect key="frame" x="109" y="363" width="237" height="29"/>
+                                <segments>
+                                    <segment title="Any"/>
+                                    <segment title="Male"/>
+                                    <segment title="Female"/>
+                                </segments>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mw7-Gt-2K5" firstAttribute="leading" secondItem="61U-Nh-F78" secondAttribute="trailing" constant="15" id="3uV-LM-Q7b"/>
+                            <constraint firstItem="MN5-6H-nOV" firstAttribute="centerY" secondItem="yZG-Xl-0xw" secondAttribute="centerY" id="4Ne-uE-jS5"/>
+                            <constraint firstItem="J2M-T9-gWh" firstAttribute="trailing" secondItem="mw7-Gt-2K5" secondAttribute="trailing" id="4fl-Fc-jDe"/>
+                            <constraint firstItem="yZG-Xl-0xw" firstAttribute="leading" secondItem="HQX-OY-eei" secondAttribute="leadingMargin" constant="43" id="8Gr-oM-rYD"/>
+                            <constraint firstItem="61U-Nh-F78" firstAttribute="top" secondItem="H4I-Xf-2At" secondAttribute="bottom" constant="65" id="B0d-Mb-uAK"/>
+                            <constraint firstItem="mw7-Gt-2K5" firstAttribute="trailing" secondItem="eBv-qW-kq3" secondAttribute="trailing" id="CIY-Ga-bF3"/>
+                            <constraint firstItem="61U-Nh-F78" firstAttribute="leading" secondItem="HQX-OY-eei" secondAttribute="leadingMargin" constant="41" id="LTG-Ly-i1b"/>
+                            <constraint firstItem="MPv-es-y8r" firstAttribute="leading" secondItem="HQX-OY-eei" secondAttribute="leadingMargin" constant="41" id="SdM-a4-hyR"/>
+                            <constraint firstItem="eBv-qW-kq3" firstAttribute="leading" secondItem="MN5-6H-nOV" secondAttribute="leading" id="TUp-eV-FJb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="J2M-T9-gWh" secondAttribute="trailing" constant="13" id="WOT-8b-pIy"/>
+                            <constraint firstItem="J2M-T9-gWh" firstAttribute="centerY" secondItem="H4I-Xf-2At" secondAttribute="centerY" id="Wmd-lt-OcL"/>
+                            <constraint firstItem="mw7-Gt-2K5" firstAttribute="leading" secondItem="eBv-qW-kq3" secondAttribute="leading" id="Zl2-xD-5Sc"/>
+                            <constraint firstItem="yZG-Xl-0xw" firstAttribute="top" secondItem="MPv-es-y8r" secondAttribute="bottom" constant="65" id="ZnB-Ie-v84"/>
+                            <constraint firstItem="mw7-Gt-2K5" firstAttribute="centerY" secondItem="61U-Nh-F78" secondAttribute="centerY" id="b0W-PZ-7ue"/>
+                            <constraint firstItem="J2M-T9-gWh" firstAttribute="leading" secondItem="mw7-Gt-2K5" secondAttribute="leading" id="c4y-8G-Xc9"/>
+                            <constraint firstItem="H4I-Xf-2At" firstAttribute="top" secondItem="De1-H3-5CI" secondAttribute="bottom" constant="45" id="ewi-4f-yjz"/>
+                            <constraint firstItem="eBv-qW-kq3" firstAttribute="centerY" secondItem="MPv-es-y8r" secondAttribute="centerY" id="key-BQ-b2c"/>
+                            <constraint firstItem="H4I-Xf-2At" firstAttribute="leading" secondItem="HQX-OY-eei" secondAttribute="leadingMargin" constant="19" id="tIZ-et-zYf"/>
+                            <constraint firstItem="MPv-es-y8r" firstAttribute="top" secondItem="61U-Nh-F78" secondAttribute="bottom" constant="65" id="udW-R4-sOP"/>
+                            <constraint firstItem="eBv-qW-kq3" firstAttribute="trailing" secondItem="MN5-6H-nOV" secondAttribute="trailing" id="x4I-kq-bZr"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WIu-Hw-gin" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3213.5999999999999" y="231.63418290854574"/>
         </scene>
         <!--Pet Page View Controller-->
         <scene sceneID="gvo-Bg-gVd">
@@ -386,7 +492,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="je2-ZC-yjq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2240.8000000000002" y="895.50224887556226"/>
+            <point key="canvasLocation" x="3180" y="895.50224887556226"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fnV-Jw-GQL">
@@ -405,6 +511,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n1j-fh-qf3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-95.200000000000003" y="128.18590704647679"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="W4V-VG-b5B">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eMb-pM-Uhx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="pEX-qH-nfs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qGz-1B-51z" kind="relationship" relationship="rootViewController" id="y9C-qk-ZrY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MIx-u3-OV8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1292" y="888.30584707646187"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
