--- a/Group16Alpha/Base.lproj/Main.storyboard
+++ b/Group16Alpha/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1No-TY-WPy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="eMb-pM-Uhx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -311,24 +311,28 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Q7C-zT-b5T" id="9Jy-Gs-WwW"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mw7-Gt-2K5">
                                 <rect key="frame" x="109" y="191" width="237" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Q7C-zT-b5T" id="Mfw-6V-iQz"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eBv-qW-kq3">
                                 <rect key="frame" x="109" y="277" width="237" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Q7C-zT-b5T" id="rLS-mX-5Mk"/>
+                                </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NbK-7i-hGi">
-                                <rect key="frame" x="163" y="575" width="48" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Search"/>
-                            </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MN5-6H-nOV">
                                 <rect key="frame" x="109" y="363" width="237" height="29"/>
                                 <segments>
@@ -337,6 +341,37 @@
                                     <segment title="Female"/>
                                 </segments>
                             </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NbK-7i-hGi">
+                                <rect key="frame" x="163" y="575" width="48" height="30"/>
+                                <state key="normal" title="Search"/>
+                                <connections>
+                                    <segue destination="qGz-1B-51z" kind="show" id="SX6-h3-ILf"/>
+                                </connections>
+                            </button>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u8P-uw-82W">
+                                <rect key="frame" x="109" y="53" width="237" height="130"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Q7C-zT-b5T" id="Cz6-AG-ZVe"/>
+                                    <outlet property="delegate" destination="Q7C-zT-b5T" id="e9u-hb-zV7"/>
+                                </connections>
+                            </pickerView>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="she-hy-TZw">
+                                <rect key="frame" x="109" y="140" width="237" height="132"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Q7C-zT-b5T" id="weC-nw-jdE"/>
+                                    <outlet property="delegate" destination="Q7C-zT-b5T" id="5sB-cE-397"/>
+                                </connections>
+                            </pickerView>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gjs-qr-bmF">
+                                <rect key="frame" x="109" y="225" width="237" height="134"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Q7C-zT-b5T" id="xP6-M4-fw3"/>
+                                    <outlet property="delegate" destination="Q7C-zT-b5T" id="Uke-9U-D9h"/>
+                                </connections>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -346,8 +381,10 @@
                             <constraint firstItem="yZG-Xl-0xw" firstAttribute="leading" secondItem="HQX-OY-eei" secondAttribute="leadingMargin" constant="43" id="8Gr-oM-rYD"/>
                             <constraint firstItem="61U-Nh-F78" firstAttribute="top" secondItem="H4I-Xf-2At" secondAttribute="bottom" constant="65" id="B0d-Mb-uAK"/>
                             <constraint firstItem="mw7-Gt-2K5" firstAttribute="trailing" secondItem="eBv-qW-kq3" secondAttribute="trailing" id="CIY-Ga-bF3"/>
+                            <constraint firstItem="rjC-Hn-VNp" firstAttribute="top" secondItem="NbK-7i-hGi" secondAttribute="bottom" constant="18" id="I91-0a-Ngm"/>
                             <constraint firstItem="61U-Nh-F78" firstAttribute="leading" secondItem="HQX-OY-eei" secondAttribute="leadingMargin" constant="41" id="LTG-Ly-i1b"/>
                             <constraint firstItem="MPv-es-y8r" firstAttribute="leading" secondItem="HQX-OY-eei" secondAttribute="leadingMargin" constant="41" id="SdM-a4-hyR"/>
+                            <constraint firstItem="NbK-7i-hGi" firstAttribute="centerX" secondItem="HQX-OY-eei" secondAttribute="centerX" id="Shc-Je-r35"/>
                             <constraint firstItem="eBv-qW-kq3" firstAttribute="leading" secondItem="MN5-6H-nOV" secondAttribute="leading" id="TUp-eV-FJb"/>
                             <constraint firstAttribute="trailingMargin" secondItem="J2M-T9-gWh" secondAttribute="trailing" constant="13" id="WOT-8b-pIy"/>
                             <constraint firstItem="J2M-T9-gWh" firstAttribute="centerY" secondItem="H4I-Xf-2At" secondAttribute="centerY" id="Wmd-lt-OcL"/>
@@ -362,6 +399,15 @@
                             <constraint firstItem="eBv-qW-kq3" firstAttribute="trailing" secondItem="MN5-6H-nOV" secondAttribute="trailing" id="x4I-kq-bZr"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ageDropDown" destination="gjs-qr-bmF" id="A1r-YU-0SP"/>
+                        <outlet property="ageTextField" destination="eBv-qW-kq3" id="afA-qr-8pe"/>
+                        <outlet property="animalDropDown" destination="u8P-uw-82W" id="Nl1-aE-HZT"/>
+                        <outlet property="animalTextField" destination="J2M-T9-gWh" id="QDa-iv-MRU"/>
+                        <outlet property="sexSegment" destination="MN5-6H-nOV" id="G7H-Aq-q4w"/>
+                        <outlet property="sizeDropDown" destination="she-hy-TZw" id="rVf-VJ-wd1"/>
+                        <outlet property="sizeTextField" destination="mw7-Gt-2K5" id="Or5-b7-Df8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WIu-Hw-gin" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -380,13 +426,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GhB-wl-cVH">
-                                <rect key="frame" x="16" y="72" width="343" height="222"/>
+                                <rect key="frame" x="16" y="28" width="343" height="222"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="222" id="ALj-uU-qOF"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="QAT-5c-Dym">
-                                <rect key="frame" x="69" y="320" width="102" height="143"/>
+                                <rect key="frame" x="69" y="276" width="102" height="143"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Type / Breed:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEf-kI-FAL">
                                         <rect key="frame" x="0.0" y="0.0" width="102" height="20.5"/>
@@ -427,7 +473,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="9au-H0-QEE">
-                                <rect key="frame" x="197" y="321" width="105.5" height="142"/>
+                                <rect key="frame" x="197" y="277" width="105.5" height="142"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;type/breed&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qya-ZF-RuA">
                                         <rect key="frame" x="0.0" y="0.0" width="105.5" height="20.5"/>
@@ -456,7 +502,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;name&gt;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tjv-TV-pYU">
-                                <rect key="frame" x="145" y="262.5" width="86" height="27.5"/>
+                                <rect key="frame" x="145" y="218.5" width="86" height="27.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -492,7 +538,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="je2-ZC-yjq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3180" y="895.50224887556226"/>
+            <point key="canvasLocation" x="3178" y="945"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fnV-Jw-GQL">
@@ -532,6 +578,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="SX6-h3-ILf"/>
         <segue reference="KWT-kz-eKm"/>
     </inferredMetricsTieBreakers>
 </document>
